# basic-django-auth-app

./: .env  .gitignore  README.md  docker-compose.yml  manage.py  poetry.toml  pyproject.toml
personal_account/: apps.py  forms.py  models.py  views.py
personal_account/templates/personal_account/: login.html  profile.html  register.html
podriv_bashki2/: asgi.py  settings.py  urls.py  wsgi.py
