[tool.poetry]
name = "podriv-bashki2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "podriv_bashki2"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
pillow = "^10.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
